finished page without responsive and navbar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,87 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/style.css" />
 		<title>Genius Photography</title>
 	</head>
-	<body></body>
+	<body>
+		<section class="hero" id="hero">
+			<div class="container hero-wrapper">
+				<h1>Genius Photography</h1>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+				<a href="#about">Know more</a>
+			</div>
+		</section>
+		<section class="about" id="about">
+			<div class="container about-wrapper">
+				<h1>About Us</h1>
+				<div class="about-content">
+					<div class="about-video">
+						<iframe
+							width="560"
+							height="315"
+							src="https://www.youtube.com/embed/0i7P_6A6mSE"
+							frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+						></iframe>
+					</div>
+					<div class="about-paragraph">
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+							beatae dolorem quas deserunt? Nihil autem alias error id dolor
+							quia accusantium necessitatibus, praesentium ut laboriosam iure
+							soluta corrupti odit? Voluptates. Nihil autem alias error id dolor
+							quia accusantium necessitatibus, praesentium ut laboriosam iure
+							soluta corrupti odit? Voluptates.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="work" id="work">
+			<div class="container work-wrapper">
+				<h1>Our Work</h1>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+				<div class="work-content">
+					<div class="work-img">
+						<img src="img/yosemite.jpg" alt="" />
+						<div class="img-txt">
+							<p>Yosemite</p>
+						</div>
+					</div>
+					<div class="work-img">
+						<img src="img/big sur 2.jpg" alt="" />
+						<div class="img-txt">
+							<p>Big Sur</p>
+						</div>
+					</div>
+					<div class="work-img">
+						<img src="img/el capitan.jpg" alt="" />
+						<div class="img-txt">
+							<p>El Capitan</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer class="contact">
+			<div class="container contact-wrapper">
+				<h1>Genius Photography</h1>
+				<hr />
+				<p>Find Us Through</p>
+				<div class="contact-content">
+					<div class="contact-img">
+						<img src="img/dribbble.png" alt="" />
+					</div>
+					<div class="contact-img">
+						<img src="img/instagram.png" alt="" />
+					</div>
+					<div class="contact-img">
+						<img src="img/twitter.png" alt="" />
+					</div>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
